--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.8",
-    "mongoose-unique-validator": "^3.1.0"
+    "mongoose": "^6.3.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
